Closed
Bug 1850414
Opened 2 years ago
Closed 2 years ago
Simplify style sheet source-map URL code.
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
119 Branch
| Tracking | Status | |
|---|---|---|
| firefox119 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
(Blocks 1 open bug)
Details
(Whiteboard: [sp3])
Attachments
(1 file)
Bug 1832022 was backed out for what seemed to be crashes when copying strings around when calling this code.
That code seems fairly reasonable. Maybe there's some UB hidden in the formatter for nsAString?
But all-in-all, that code is rather dumb, and should be simplified.
| Assignee | ||
Comment 1•2 years ago
|
||
The old code was basically doing string copies that are totally
redundant, in a not-very performant way too.
This was from the time where stylo had to live with the old style
engine, and there's no need to keep the copy around anymore.
Updated•2 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7d886c06f7b5
Simplify style sheet source-map URL code. r=layout-reviewers,firefox-style-system-reviewers,webidl,smaug,boris
Comment 3•2 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox119:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
Updated•2 years ago
|
Whiteboard: [sp3]
Updated•2 years ago
|
See Also: → https://mozilla-hub.atlassian.net/browse/SP3-537
You need to log in
before you can comment on or make changes to this bug.
Description
•